--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "api": "json-server --host 192.168.1.4 --watch db.json",
-    "test": "jest"
+    "test": "jest --watch --coverage=false",
+    "testFinal": "jest"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
